Fix h1 title on mobile mode

--- a/style.css
+++ b/style.css
@@ -146,11 +146,6 @@ header {
   font-weight: lighter;
 }
 
-.h1-img {
-  height: 200px;
-  width: auto;
-}
-
 .description-div {
   padding: 3%;
   background-color: #f7f7f8;
@@ -472,6 +467,11 @@ hr {
     font-size: 45px;
   }
 
+  .h1-img {
+    height: auto;
+    width: 90%;
+  }
+
   .introduction {
     padding: 15% 5%;
   }
@@ -601,6 +601,11 @@ hr {
 
   .introduction {
     padding: 10%;
+  }
+
+  .h1-img {
+    height: 200px;
+    width: auto;
   }
 
   .introduction-subtitle {
